--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <div class="fieldForToBeFilled">
+      <input
+        class="imagesInput"
+        type="text"
+        placeholder="Search images..."
+        required
+      />
+      <button class="searchImages">Search</button>
+    </div>
+    <span class="loader"></span>
     <div class="listOfPhotos"></div>
-    <input
-      class="imagesInput"
-      type="text"
-      placeholder="Search images"
-      required
-    />
-    <button class="searchImages">Search</button>
     <script type="module" src="./main.js"></script>
     <script type="module" src="./js/pixabay-api.js"></script>
     <script type="module" src="./js/render-function.js"></script>
